# filpe

./: .dockerignore  .gitignore  .golangci.yml  AGENTS.md  Dockerfile  Makefile  README.md  ROADMAP.md  app.go  config.example.json  docker-compose.yml  go.mod  go.sum  main.py  pyproject.toml  run.bat  run.ps1
cmd/maxio/: main.go
cmd/maxio-s3bench/: main.go
deploy/: compose.single.yaml  compose.three-node.yaml
deploy/systemd/: maxio.env.example  maxio.service
docs/: deployment.md  s3-bench.md  smoke-tests.md
internal/bytesrange/: range.go  range_test.go
internal/config/: address.go  config.go  index.go  module.go  repair.go  validation.go
internal/dedupe/: module.go
internal/discovery/: delegate.go  module.go  runtime.go
internal/engine/: backend.go  blob.go  coder.go  distributed_repair_test.go  distributed_test.go  distributed_three_node_test.go  drain_test.go  engine.go  engine_test.go  health.go  layout.go  module.go  object_lookup.go  orphan.go  orphan_test.go  placement.go  placement_test.go  rebalance.go  remote_node.go  remote_node_test.go  repair.go  repair_local_test.go  scrub.go  scrub_test.go  shard_recovery.go  shard_store.go  stat.go  storage_control.go  storage_node.go  storage_node_info.go  storage_nodes.go
internal/handler/: audit.go  auth.go  auth_test.go  cluster.go  cluster_decommission.go  cluster_lifecycle_helpers_test.go  cluster_lifecycle_leader_test.go  (+41 more)
object/: event_payload.go  events_test.go  index_rebuild.go  indexer.go  indexer_test.go  module.go  service.go
scripts/: create_sample_excel.py
server/: Cargo.toml
(+128 files in other folders)
