[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/filpe"]

[project]
name = "filpe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "injector>=0.24.0",
    "openpyxl>=3.1.5",
    "orjson>=3.11.7",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "rq>=2.7.0",
    "structlog>=25.5.0",
    "uvicorn>=0.42.0",
    "valkey>=6.1.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.13.0",
    "poethepoet>=0.29.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
    "types-openpyxl",
]

[project.scripts]
filpe = "filpe.cli:main"
filpe-worker = "filpe.workers.cli:main"

[tool.poe.tasks]
lint = "ruff check src/"
format = "ruff format src/"
format-check = "ruff format --check src/"
typecheck = "mypy src/"
test = "pytest"
build = "uv build"
docker = "docker build -t filpe:latest ."
docker-compose = "docker compose build"
default = ["lint", "format-check"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["B008", "UP042"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
